cmake_minimum_required(VERSION 2.8.9)
project(ETOL)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/../cmake")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set (BOOST_NO_SYSTEM_PATHS ON)
set (Boost_USE_MULTITHREADED ON)
set (Boost_DETAILED_FAILURE_MSG ON)
set (Boost_USE_STATIC_RUNTIME OFF)
set (Boost_USE_STATIC_LIBS OFF)
set (Boost_DEBUG OFF) # Turn on for debug info
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include_directories(${PROJECT_SOURCE_DIR}/../include)

SET (SUBDIRS TrajectoryOptimizer eGurobi ePSOPT eGLPK eOMPL eDymos Examples)

FOREACH(subdir ${SUBDIRS})
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${subdir})
ENDFOREACH()

option(BUILD_DOCS "Build documentation" OFF)
if (BUILD_DOCS)
	ADD_SUBDIRECTORY(docs)
endif()
